Estructura HTML básica del portfolio

--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bruno Ligorria | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bruno Ligorria - Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
     <nav>
       <h1>Bruno Ligorria</h1>
       <ul>
-        <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#sobremi">Sobre mí</a></li>
+        <li><a href="#sobre-mi">Sobre mí</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
         <li><a href="#proyectos">Proyectos</a></li>
         <li><a href="#contacto">Contacto</a></li>
@@ -22,21 +20,35 @@
   </header>
 
   <main>
-    <section id="inicio">
-      <h2>Hola, soy Bruno</h2>
-      <p>Desarrollador web y editor de video</p>
-    </section>
-
-    <section id="sobremi">
+    <section id="sobre-mi">
       <h2>Sobre mí</h2>
-      <p>Tengo 17 años, vivo en Lomas de Zamora y me apasiona la tecnología, la edición y la programación.</p>
+      <p>Hola, soy Bruno. Tengo 17 años y soy programador junior. Me especializo en desarrollo web y edición de video.</p>
     </section>
 
-    <!-- más secciones después -->
+    <section id="habilidades">
+      <h2>Habilidades</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Git & GitHub</li>
+        <li>Edición de video</li>
+      </ul>
+    </section>
+
+    <section id="proyectos">
+      <h2>Proyectos</h2>
+      <p>Pronto agregaré algunos de mis proyectos destacados aquí.</p>
+    </section>
+
+    <section id="contacto">
+      <h2>Contacto</h2>
+      <p>Podés contactarme por WhatsApp o correo electrónico.</p>
+    </section>
   </main>
 
   <footer>
-    <p>© 2025 Bruno Ligorria</p>
+    <p>&copy; 2025 Bruno Ligorria</p>
   </footer>
 </body>
 </html>
